components/scss/partials/_kegs.scss
@use './components/scss/partials/vars' as *;
@use './components/scss/partials/fonts';

#kegs_container {
  display: grid;
  grid-gap: 50px 0;
}

.keg {
  position: relative;
}

.keg_number {
  background-color: $bright-purple-bg;
  font-family: $text-font;
  color: white;
  width: 25px;
  border-radius: 100%;
  padding: 0px 7px;
  position: absolute;
  top: 10px;
  left: 40%;
}

.beer_label {
  position: absolute;
  top: 40px;
  left: 20%;
}

.keg_tap {
  width: 15%;
  position: absolute;
  top: 50%;
  left: 40%;
  z-index: 3000;
}

.storage {
  text-align: center;
  background-color: #2c383e;
  width: 35px;
  border-radius: 20%;
  font-size: 2rem;
  position: absolute;
  left: 33%;
  font-family: "DS-Digital";
  color: #29f1d7;
}

.svg_container {
  width: 100%;
}

.blinking_red {
  animation: blinking_red 1s infinite ease;
}

@keyframes blinking_red {
  from {
    fill: red;
  }
  to {
    fill: auto;
  }
}

.blinking_red_color {
  animation: blinking_red_color 1s infinite ease;
}

@keyframes blinking_red_color {
  from {
    color: red;
  }
  to {
    color: auto;
  }
}

// @media only screen and (min-width: 700px) {
//   #kegs_container {
//     grid-template-columns: 1fr 1fr 1fr 1fr;
//     margin: 150px auto;
//   }
// }

// @media only screen and (min-width: 800px) {
//   .keg {
//     width: 130px;
//   }

//   #kegs_container {
//     grid-template-columns: 1fr 1fr 1fr 1fr;
//     margin: 90px auto;
//   }
// }

// @media only screen and (min-width: 1000px) {
//   #kegs_container {
//     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
//     margin: 70px auto;
//   }
// }

@media all and (orientation: portrait) {
  .keg {
    width: 60%;
    margin-left: 7vw;
    margin-top: -4vw;
    margin-bottom: 13vw;
  }

  #kegs_container {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media all and (orientation: landscape) {
  .keg {
    width: 80px;
    margin-top: 4vw;
    margin-left: 5vw;
  }

  #kegs_container {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    width: 90%;
  }
}

@media only screen and (min-width: 800px) {
  #kegs_container {
    margin: 140px auto;
  }
}

@media only screen and (min-width: 900px) {
  .keg {
    width: 100px;
  }

  #kegs_container {
    margin: 120px auto;
  }
}

@media only screen and (min-width: 1000px) {
  .keg {
    width: 120px;
  }

  #kegs_container {
    margin: 80px auto;
  }
}

